# harmony

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BOX-GATES-task108.md  COVERAGE-RECOVERY.md  Cargo.toml  HOTFIX-ci-cfg-linux.md  IMPLEMENTATION-task105.md  IMPLEMENTATION-task108.md  IMPLEMENTATION-task110.md  IMPLEMENTATION-task114.md  IMPLEMENTATION-task115.md  IMPLEMENTATION-task56.md  IMPLEMENTATION-task61.md  IMPLEMENTATION-task69-m2.md  IMPLEMENTATION-task69.md  IMPLEMENTATION-task73.md  IMPLEMENTATION-task86.md  IMPLEMENTATION-task95.md  IMPLEMENTATION.md  PLAN.md  README.md  clippy.toml  deny.toml  rust-toolchain.toml
consonance/acceptance-suite/: Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  corpus-manifest.example.toml
consonance/acceptance-suite/golden/: IMPLEMENTATION.md  hello.txt  insn-cpuid.provenance.md  insn-mwait.txt  insn-rdpmc.digest  insn-rdtsc.txt  msr-allowed.digest  msr-allowed.txt
consonance/acceptance-suite/payloads/: Cargo.toml  IMPLEMENTATION.md  README.md  linker.ld
consonance/acceptance-suite/scripts/: lib.sh
consonance/acceptance-suite/src/: lib.rs  main.rs  manifest.rs  oracle.rs  registry.rs  report.rs
consonance/acceptance-suite/tests/: cli.rs  manifest_roundtrip.rs  o1_determinism.rs  o2_conformance.rs  o3_seed_sensitivity.rs  public-api.txt  public_api.rs
consonance/gicv3/: Cargo.toml
consonance/gicv3/src/: device.rs  error.rs  lib.rs  state.rs
consonance/gicv3/tests/: arbitration.rs  public-api.txt  public_api.rs
consonance/hypercall-doorbell/: Cargo.toml  IMPLEMENTATION.md
consonance/hypercall-doorbell/tests/: loopback.rs
consonance/hypercall-proto/: Cargo.toml  IMPLEMENTATION.md
consonance/hypercall-proto/src/: lib.rs
consonance/hypercall-proto/tests/: protocol.rs  public-api.txt  public_api.rs  stateful.rs
consonance/lapic/: Cargo.toml  IMPLEMENTATION.md
consonance/lapic/src/: device.rs  device_proofs.rs  error.rs  lib.rs  state.rs
consonance/lapic/tests/: delivery.rs  public-api.txt  public_api.rs  registers.rs  reset.rs  snapshot.rs  timer.rs
consonance/pit/: Cargo.toml  IMPLEMENTATION.md
consonance/pit/src/: device.rs  device_proofs.rs  error.rs  lib.rs  state.rs
consonance/pit/tests/: public-api.txt  public_api.rs  reference.rs
consonance/snapshot-store/: Cargo.toml  IMPLEMENTATION.md
consonance/snapshot-store/src/: lib.rs  mapping.rs
consonance/snapshot-store/tests/: bench.rs  bench_production_shape.rs  gates.rs  mutation_kills.rs  oracle.rs  public-api.txt  public_api.rs  stateful.rs
consonance/telemetry/: Cargo.toml  IMPLEMENTATION.md
consonance/telemetry/assets/: index.html
consonance/telemetry/src/: event.rs  lib.rs  main.rs  observer.rs  server.rs  sink.rs
consonance/telemetry/tests/: ndjson_roundtrip.rs  server_loopback.rs
consonance/unison/: Cargo.toml  IMPLEMENTATION.md
consonance/unison/src/: flaky.rs  lib.rs  main.rs  toy.rs
consonance/unison/tests/: bisector.rs  cli.rs  determinism.rs  mutation_kills.rs  public-api.txt  public_api.rs
consonance/vm-state/: Cargo.toml  IMPLEMENTATION.md
consonance/vm-state/src/: arm64.rs  codec.rs  error.rs  lib.rs  records.rs  types.rs  wire.rs
consonance/vm-state/tests/: determinism.rs  golden.rs  public-api.txt  public_api.rs  roundtrip.rs  strict_decode.rs  version_ratio.rs
consonance/vmm-backend/: .gitignore  Cargo.toml  IMPLEMENTATION.md
consonance/vmm-backend/kvm-patches/: BUILD.md  IMPLEMENTATION.md  RESULTS.md
consonance/vmm-backend/proptest-regressions/: run_until.txt
consonance/vmm-backend/src/: arm64_kvm.rs  arm64_kvm_sys.rs  backend.rs  config.rs  error.rs  exit.rs  kvm.rs  kvm_sys.rs  lib.rs  mock.rs  mock_arm64.rs  patched_kvm.rs  pmu.rs  pmu_sys.rs  region.rs  region_proofs.rs  run_buf.rs  run_until.rs  state.rs  types.rs
consonance/vmm-backend/tests/: dyn_backend.rs  exhaustive.rs  kvm_smoke.rs  live_preemption.rs  n2_nested_hammer.rs  public-api.txt  public_api.rs  run_loop.rs  vcpu_state.rs
consonance/vmm-core/: Cargo.toml  IMPLEMENTATION.md  SEAL-RATE-REPORT.md  k3s-run.k1.ndjson
consonance/vmm-core/proptest-regressions/: linux_loader.txt
consonance/vmm-core/src/: bringup.rs  control.rs  corpus.rs  devices.rs  entry.rs  exec.rs  hostassert.rs  lib.rs  linux_loader.rs  multiboot.rs  seal_rate.rs  snapshot.rs  vmm.rs  work.rs
consonance/vmm-core/tests/: arm64_skeleton.rs  arm64_tcg_smoke.rs  box_corpus.rs  corpus_oracle_mock.rs  event_loop.rs  linux_loader_proptest.rs  live_branching_demo.rs  live_determinism.rs  live_dirty_remap.rs  live_exec_improvisation.rs  live_host_plane.rs  live_k3s_postgres.rs  live_linux_boot.rs  live_m1_m2.rs  live_moment_address.rs  live_nonquiescent_snapshot.rs  live_postgres.rs  live_postgres_docker.rs  live_preemption.rs  live_pvclock.rs  live_runc_postgres.rs  live_sdk.rs  live_snapshot_branch.rs  loader_proptest.rs  n3_repeat_gate.rs  public-api.txt  public_api.rs  seal_rate_sweep.rs  snapshot_branch.rs
consonance/vtime/: Cargo.toml  IMPLEMENTATION.md
consonance/vtime/src/: clock.rs  clock_proofs.rs  error.rs  idle.rs  idle_proofs.rs  lib.rs  planner.rs  pvclock.rs  queue.rs  sim.rs
consonance/vtime/tests/: e2e.rs  (+8 more)
dissonance/benchmark/: CORRELATION-REPORT.md  Cargo.toml  REKEY-REPORT.md  SMB-EXPLORATION-REPORT.md
dissonance/conductor/: Cargo.toml  IMPLEMENTATION.md
dissonance/control-proto/: Cargo.toml  IMPLEMENTATION.md
dissonance/environment/: Cargo.toml  IMPLEMENTATION.md
dissonance/explorer/: Cargo.toml  IMPLEMENTATION-task75.md  IMPLEMENTATION.md
dissonance/film/: Cargo.toml  IMPLEMENTATION.md  README.md
dissonance/logtmpl/: Cargo.toml  IMPLEMENTATION.md
dissonance/matcher/: Cargo.toml  IMPLEMENTATION.md
dissonance/maze/: Cargo.toml
dissonance/oracle-elle/: Cargo.toml  IMPLEMENTATION.md
dissonance/rekey/: Cargo.toml  IMPLEMENTATION.md
dissonance/resolution/: Cargo.toml  IMPLEMENTATION.md
dissonance/revision-coordinator/: Cargo.toml  IMPLEMENTATION.md
dissonance/runtrace/: Cargo.toml  IMPLEMENTATION.md
dissonance/sdk-events/: Cargo.toml  IMPLEMENTATION.md
dissonance/tactics-regime/: Cargo.toml  IMPLEMENTATION.md
(+2753 files in other folders)
