[package]
name = "pit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic userspace i8254 PIT (counter 0 → IRQ0 system tick, V-time-driven; pure logic, no_std)"

[features]
# Off by default: the core state machine compiles and passes every gate with no
# features. `serde` derives Serialize/Deserialize on `PitState` only — the seam a
# future `vm-state` integration would consume (mirrors `lapic`'s `serde` feature).
default = []
serde = ["dep:serde"]

[dependencies]
# `default-features = false` keeps thiserror no_std: the derive then targets
# `core::error::Error` (stable since Rust 1.81) instead of `std::error::Error`.
thiserror = { version = "2", default-features = false }
# Used *only* to derive Serialize/Deserialize on `PitState`; optional, behind the
# `serde` feature. `default-features = false` + `alloc` keeps it no_std.
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
], optional = true }

[dev-dependencies]
proptest = "1"

# Not `[lints] workspace = true`: this crate also registers the `kani` cfg (so the
# standard build's `unexpected_cfgs` lint does not flag the `#[cfg(kani)]` proof
# harnesses in `src/device.rs`), and Cargo cannot combine `lints.workspace = true`
# with a crate-local `[lints.rust]` table. The `[lints.clippy]` table below mirrors
# the workspace's `all = deny`. Mirrors `lapic`'s / `vtime`'s Cargo.toml.
[lints.clippy]
all = { level = "deny", priority = -1 }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
