[package]
name = "snapshot-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Layered copy-on-write guest-memory snapshot store"

[lints]
workspace = true

[dependencies]
blake3 = "1"
memmap2 = "0.9"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
proptest = "1"
proptest-state-machine = "0.3"
