[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Out-of-band, read-only observation tap + std-only web console (live + replay) for the deterministic VMM"

[features]
default = ["cli"]
# The `console` binary and its only extra dependency, `clap` (bins-only per the
# conventions rule-5 whitelist). The library — schema, NDJSON wire, observer,
# sinks, and the std-only web server — needs no features and pulls no `clap`.
cli = ["dep:clap"]

[[bin]]
name = "console"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Schema (de)serialization and the NDJSON wire. `serde_json` is a std-only crate
# on the rule-5 whitelist; it is the ONLY wire dependency (no async, no
# framework). See IMPLEMENTATION.md.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# CLI for the `console` bin only (whitelist: clap is bins-only).
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
