[package]
name = "unison"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["cli"]
# The `unison` binary and its deps; disable for a clap-free library
# (e.g. the future real-VM adapter crate).
cli = ["dep:clap", "dep:serde_json"]

[[bin]]
name = "unison"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
