[package]
name = "vmm-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Non-default. Gates the in-process `MockBackend` (the deterministic `Backend`
# substrate task 15 unit-tests vmm-core against). NOT `#[cfg(test)]`: a
# `#[cfg(test)]` item is invisible to downstream crates, so it could not be the
# mock task 15 turns on under `[dev-dependencies]`. The default build compiles the
# trait + value types only. See tasks/14-backend.md §"Features".
mock = []

[dependencies]
thiserror = "2"
# Rule-2 sibling exception (task 47): `run_until` (the §2 inversion seam) drives
# the pure precise-injection planner that lives in `vtime` — the `InjectionPlanner`
# / `CpuBackend` / `PlanOutcome` state machine and its `skid_margin`. This is a
# DOWNWARD dependency (vtime is pure-logic, no_std-ish, depends on nothing in this
# workspace), so it introduces no cycle and keeps `vmm-backend` free of any
# `vmm-core` (upward) dependency — the live `CpuBackend` is implemented HERE on a
# backend-owned PMU counter (see IMPLEMENTATION.md "central design decision").
# Pinned `version` alongside `path` for `cargo deny`'s wildcard ban.
vtime = { path = "../vtime", version = "0.1.0" }

# Linux-only frontier deps (reviewed rule-5 whitelist EXCEPTION, recorded in
# tasks/14-backend.md §"Dependencies" and the PR description — NOT a deny.toml
# edit; deny.toml has no crate allowlist). These gate `KvmBackend` only; a macOS
# `cargo build -p vmm-backend` never compiles them (the trait + value types +
# `MockBackend` are platform-portable and pull none of these). Caret defaults,
# pin nothing.
[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.25"
# `fam-wrappers` provides the Fam-struct builders (`CpuId`, `Msrs`) we hand to the
# CPUID / MSR ioctls; kvm-ioctls already enables it, declared here for clarity.
kvm-bindings = { version = "0.14", features = ["fam-wrappers"] }
libc = "0.2"

[dev-dependencies]
proptest = "1"
# Model-based (stateful) property test for the first-entry PMU-reset discipline
# (`run_until`'s P1(b) fix): random save/restore/run sequences over N VMs sharing one
# pinned thread, checked against an independent reference (quality-e's `proptest-
# state-machine`, already used by snapshot-store / hypercall-proto).
proptest-state-machine = "0.3"

[lints]
workspace = true
