[package]
name = "benchmark"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Task 69 (GO/NO-GO #2): the seeded-bug benchmark manifest, the signal→bug correlation statistics (hand-rolled rank/Spearman over integers), and CORRELATION-REPORT.md generation. Pure logic; the shared fixture tasks 71/72/75 extend."

[lints]
workspace = true

[features]
default = ["cli"]
# The `benchmark-report` binary and its only extra dep, `clap` (bins-only per the
# rule-5 whitelist). The library — manifest, triggers, statistics, report
# rendering — pulls no clap.
cli = ["dep:clap"]

[[bin]]
name = "benchmark-report"
path = "src/bin/report.rs"
required-features = ["cli"]

[dependencies]
# The species estimators (STADS) live in `explorer::stads` — this is the
# contract that module was placed on (task 69 spec). Pinned `version` alongside
# `path` for `cargo deny`'s wildcard ban.
explorer = { path = "../explorer", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
