[package]
name = "conductor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The task-58 close-the-loop demo + loopback gates: the explorer's socket Machine driven against vmm-core's control-transport server"

[lints]
workspace = true

[features]
default = ["cli"]
# The `conductor` binary and its only extra dependency, `clap` (bins-only per
# the rule-5 whitelist). The library — the sweep driver, run-table rendering,
# and the mock server composition the loopback gates share — pulls no clap.
cli = ["dep:clap"]

[[bin]]
name = "conductor"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# The two halves this crate closes the loop between (task 58): vmm-core's
# control-transport server and the explorer's socket-backed Machine, plus the
# codec/wire crates both speak. All first-party workspace crates; pinned
# `version` alongside `path` for `cargo deny`'s wildcard ban.
explorer = { path = "../explorer", version = "0.1.0" }
environment = { path = "../environment", version = "0.1.0" }
control-proto = { path = "../control-proto", version = "0.1.0" }
vmm-core = { path = "../../consonance/vmm-core", version = "0.1.0" }
# `mock` is a full (not dev-) dependency: the demo binary's portable mode and
# the loopback gates both compose the server around a scripted `MockBackend`
# (the box mode uses `boot_linux_selected`, which needs no extra feature).
vmm-backend = { path = "../../consonance/vmm-backend", version = "0.1.0", features = ["mock"] }
# CLI for the `conductor` bin only (whitelist: clap is bins-only).
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
