[package]
name = "conductor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The task-58 close-the-loop demo + loopback gates: the explorer's socket Machine driven against vmm-core's control-transport server"

[lints]
workspace = true

[features]
default = ["cli"]
# The `conductor` binary and its only extra dependency, `clap` (bins-only per
# the rule-5 whitelist). The library — the sweep driver, run-table rendering,
# and the mock server composition the loopback gates share — pulls no clap.
cli = ["dep:clap"]

[[bin]]
name = "conductor"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# The two halves this crate closes the loop between (task 58): vmm-core's
# control-transport server and the explorer's socket-backed Machine, plus the
# codec/wire crates both speak. All first-party workspace crates; pinned
# `version` alongside `path` for `cargo deny`'s wildcard ban.
explorer = { path = "../explorer", version = "0.1.0" }
environment = { path = "../environment", version = "0.1.0" }
control-proto = { path = "../control-proto", version = "0.1.0" }
# Task 69: the benchmark manifest + correlation-log schema this driver emits.
benchmark = { path = "../benchmark", version = "0.1.0" }
# Task 69 M2: the REAL task-67 signal under test (GO/NO-GO #2 must measure the
# actual CellFn the selectors get built on, not a stand-in). The benchmark campaign
# clusters the captured guest console into template species (LogSensor) and keys the
# accumulating slice into bounded cells (CellFnV1). A fresh sensor per (config, seed)
# campaign — the cell key is count-based (species-progress + last-new), so
# independent per-seed codebooks stay cross-seed comparable and the seeds parallelize.
logtmpl = { path = "../logtmpl", version = "0.1.0" }
# The task-65 replay-plane journal/store the recording session populates.
runtrace = { path = "../runtrace", version = "0.1.0" }
# Task 73: the link tier that decodes the raw SDK event capture into
# `RunTrace.events` (both the in-process recording path and the socket campaign).
link = { path = "../link", version = "0.1.0" }
# Typed recording-session errors (rule-5 whitelist).
thiserror = "2"
# Per-row journal digest for the divergence + reload gates (rule-5 whitelist;
# already in the tree via runtrace's TraceId).
blake3 = "1"
vmm-core = { path = "../../consonance/vmm-core", version = "0.1.0" }
# `mock` is a full (not dev-) dependency: the demo binary's portable mode and
# the loopback gates both compose the server around a scripted `MockBackend`
# (the box mode uses `boot_linux_selected`, which needs no extra feature).
vmm-backend = { path = "../../consonance/vmm-backend", version = "0.1.0", features = ["mock"] }
# CLI for the `conductor` bin only (whitelist: clap is bins-only).
clap = { version = "4", features = ["derive"], optional = true }
# The task-86 game campaign's discovery-event log artifact (the JSON array the
# offline `exploration-report` renders). Whitelisted (rule 5).
serde_json = "1"
# The toy planted-bug machine's `state_hash` digest (task 60, portable gate).
# Whitelisted; the campaign loop + oracle themselves reuse the explorer's
# canonical bug fingerprint, so `sha2` is only the toy backend's state hash.
sha2 = "0.10"
# Task 69 M2: the box benchmark-campaign bin (de)serializes the box-calibrated
# manifest and emits the per-(config,seed) CampaignLog + finding certificates as
# JSON for the offline `benchmark-report`. Whitelisted (std serde_json).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
# The recording gate records into a throwaway store dir per test.
tempfile = "3"
# The loopback SDK-events gate encodes an Event doorbell frame to stage in guest
# RAM (task 73); the guest-side hypercall codec, dev-only.
hypercall-proto = { path = "../../consonance/hypercall-proto", version = "0.1.0" }
