[package]
name = "control-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Out-of-band control-plane wire types + versioned, length-delimited codec (dissonance task 25)"

[lints]
workspace = true

[dependencies]
thiserror = "2"

[dev-dependencies]
proptest = "1"
